solved panel mis-align on resize

--- a/pdxroasters-static/css/style.css
+++ b/pdxroasters-static/css/style.css
@@ -132,7 +132,6 @@ nav, nav.active{
        -o-transition-delay: 200ms;
           transition-delay: 200ms;
 }
-
   
   nav a{
     font: normal 400 1em/1.25em 'DIN', Helvetica, Arial, Sans;
@@ -168,8 +167,7 @@ nav, nav.active{
              transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000);
     }
 
-#active_underline{ height:2px; border-bottom: 2px dashed #0099ff; position:absolute; top:27px; right:0; width:0;}
-
+  #active_underline{ height:2px; border-bottom: 2px dashed #0099ff; position:absolute; top:27px; right:0; width:0;}
   #active_underline.nav1{ width:115px; right:207px;}
   #active_underline.nav2{ width:54px;  right:116px;}
   #active_underline.nav3{ width:73px; right:2px;}
@@ -396,187 +394,18 @@ a.close{
 
 @media only screen and (min-width: 300px) {
 
-header {
-  position:absolute; 
-  top:0; 
-  left:0; 
-  right:0; 
-  padding: 10px 0 0 0; 
-  background-color:white; 
-  z-index:4; 
-  width:100%;
-  max-width:100%;
-  overflow:hidden;}
-
 }
-nav{
-  position:absolute; 
-  top:3em; 
-  right:40px;
-  overflow:hidden; 
-  height:32px;
-  background-color:#efefef;
-  }
-
-nav.active{
-
-  }
-
-nav, nav.active{
-  -webkit-transition:all 300ms ease-in-out;
-     -moz-transition:all 300ms ease-in-out;
-      -ms-transition:all 300ms ease-in-out;
-       -o-transition:all 300ms ease-in-out;
-          transition:all 300ms ease-in-out;
-  -webkit-transform:translateZ(0);
-     -moz-transform:translateZ(0);
-      -ms-transform:translateZ(0);
-       -o-transform:translateZ(0);
-          transform:translateZ(0);
-  -webkit-transition-delay: 200ms;
-     -moz-transition-delay: 200ms;
-      -ms-transition-delay: 200ms;
-       -o-transition-delay: 200ms;
-          transition-delay: 200ms;
-}
-
-  
-  nav a{
-    font: normal 400 1em/1.25em 'DIN', Helvetica, Arial, Sans;
-    letter-spacing:1px;
-    color:#333333;
-    text-transform:uppercase;
-    text-align:right;
-    margin-left:32px;
-    text-decoration:none;
-  }
-
-    #plus{
-      display:block;
-      background:transparent url('../img/plusthin.png') top left no-repeat;
-      width:22px;
-      height:22px;
-      vertical-align:1px;
-      margin-right:20px;
-      margin-bottom:32px;
-    }
-    #plus.active{
-      -webkit-transform: rotate(-225deg);
-         -moz-transform: rotate(-225deg);
-          -ms-transform: rotate(-225deg);  
-           -o-transform: rotate(-225deg); 
-              transform: rotate(-225deg);
-    }
-    #plus.active, #plus{ 
-
-     -webkit-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-        -moz-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-         -ms-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-          -o-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-             transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000);
-    }
-
-#active_underline{ height:2px; border-bottom: 2px dashed #0099ff; position:absolute; top:27px; right:0; width:0;}
-
-  #active_underline.nav1{ width:115px; right:207px;}
-  #active_underline.nav2{ width:54px;  right:116px;}
-  #active_underline.nav3{ width:73px; right:2px;}
-
 /* Landscape */
 
 @media only screen and (min-width: 480px) {
   
-
 }
 
 /* - - - - - - - - - - Medium  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 /* iPad Portrait (Or android tablets, I don't judge.) */
-/*
+
 @media only screen and (min-width: 768px) {
-header {
-  position:absolute; 
-  top:0; 
-  left:0; 
-  right:0; 
-  padding: 10px 0 0 0; 
-  background-color:white; 
-  z-index:4; 
-  width:100%;
-  max-width:100%;
-  overflow:hidden;}
-
-}
-nav{
-  position:absolute; 
-  top:3em; 
-  right:-344px;
-  overflow:hidden; 
-  height:32px;
-  }
-
-nav.active{
-  right:40px;
-  }
-
-nav, nav.active{
-  -webkit-transition:all 300ms ease-in-out;
-     -moz-transition:all 300ms ease-in-out;
-      -ms-transition:all 300ms ease-in-out;
-       -o-transition:all 300ms ease-in-out;
-          transition:all 300ms ease-in-out;
-  -webkit-transform:translateZ(0);
-     -moz-transform:translateZ(0);
-      -ms-transform:translateZ(0);
-       -o-transform:translateZ(0);
-          transform:translateZ(0);
-  -webkit-transition-delay: 200ms;
-     -moz-transition-delay: 200ms;
-      -ms-transition-delay: 200ms;
-       -o-transition-delay: 200ms;
-          transition-delay: 200ms;
-}
-
-  
-  nav a{
-    font: normal 400 1em/1.25em 'DIN', Helvetica, Arial, Sans;
-    letter-spacing:1px;
-    color:#333333;
-    text-transform:uppercase;
-    text-align:right;
-    margin-left:32px;
-    text-decoration:none;
-  }
-
-    #plus{
-      display:inline-block;
-      background:transparent url('../img/plusthin.png') top left no-repeat;
-      width:22px;
-      height:22px;
-      vertical-align:1px;
-      margin-right:20px;
-    }
-    #plus.active{
-      -webkit-transform: rotate(-225deg);
-         -moz-transform: rotate(-225deg);
-          -ms-transform: rotate(-225deg);  
-           -o-transform: rotate(-225deg); 
-              transform: rotate(-225deg);
-    }
-    #plus.active, #plus{ 
-
-     -webkit-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-        -moz-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-         -ms-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-          -o-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
-             transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000);
-    }
-
-#active_underline{ height:2px; border-bottom: 2px dashed #0099ff; position:absolute; top:27px; right:0; width:0;}
-
-  #active_underline.nav1{ width:115px; right:207px;}
-  #active_underline.nav2{ width:54px;  right:116px;}
-  #active_underline.nav3{ width:73px; right:2px;} 
 
 }
 
